--- a/CHANGELOG
+++ b/CHANGELOG
@@ -809,3 +809,10 @@ This file describes the changes to xinetd. The base version is 2.0.0.
 		- Andrey Alekseyev
 	Fix a reconfig timing issue.
 		- Andrey Alekseyev
+devel
+	Fix some compile time errors on Solaris
+	Fixed a bounds check in Sdone().  Patch from Dmitry V. Levin
+	Added FreeBSD loadavg support.  Patch from Vanilla I. Shu
+	TCPMUX parser updates. -Steve Grubb
+	TCPMUX was causing core dumps due to changes made in 2.3.10's 
+		child_process(), reverted changes. -Philip Armstrong
