--- a/CHANGELOG
+++ b/CHANGELOG
@@ -821,4 +821,4 @@ devel
 	Added better error handling to filelog.c. -Steve Grubb
 	Error messages now go to syslog instead of stderr in 
 		strparse.c. -Steve Grubb
-	
+	Fixed memory leaks found with valgrind. -Steve Grubb	
