Correct banner closing

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -824,3 +824,5 @@ devel
 	Fixed memory leaks found with valgrind. -Steve Grubb
 	Correct problems with bind specified in the default 
 		section. -Steve Grubb
+	Use Sclose to close banner commands. -Jay Fenlason
+
