The man page for xinetd.conf says that banner is printed for all connections regardless of access control. This patch fixes it.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -825,4 +825,4 @@ devel
 	Correct problems with bind specified in the default 
 		section. -Steve Grubb
 	Use Sclose to close banner commands. -Jay Fenlason
-
+	Correct banner to match man pages. -Jay Fenlason
