--- a/CHANGELOG
+++ b/CHANGELOG
@@ -826,3 +826,8 @@ This file describes the changes to xinetd. The base version is 2.0.0.
 		section. -Steve Grubb
 	Use Sclose to close banner commands. -Jay Fenlason
 	Correct banner to match man pages. -Jay Fenlason
+devel
+	Cleanup some signal handling if not defined. -MARUYAMA Shinichi
+	Make ident protocol work properly for multi-homed hosts. -Alan Sundell
+	Code cleanup for const warnings. -Steve Grubb
+	Make redirect protocol independent. -Cougar
