Add don't fork option

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -839,3 +839,5 @@ devel
 		a default setting, as the default seems to be in flux.
 	Address compare in reconfig was wrong. Its now corrected to handle
 		each address family separately. -Steve Grubb
+	Add command line option to not fork. This will allow xinetd to be
+		started by init or daemontools. -Matthias Andree
