--- a/CHANGELOG
+++ b/CHANGELOG
@@ -841,3 +841,6 @@ devel
 		each address family separately. -Steve Grubb
 	Add command line option to not fork. This will allow xinetd to be
 		started by init or daemontools. -Matthias Andree
+	Fixed a leak in reconfig. If file logging is used for a service and
+		SIGHUP is sent to xinetd, it leaked a file descriptor and 
+		44 bytes of memory per service using FILELOG. -Steve Grubb
