--- a/xinetd/xinetd.conf.man
+++ b/xinetd/xinetd.conf.man
@@ -498,6 +498,11 @@ to "no", then the server runs with no supplementary groups.  This
 attribute must be set to "yes" for many BSD systems.  This attribute
 can be set in the defaults section as well.
 .TP
+.B mdns
+Takes either "yes" or "no".  On systems that support mdns registration
+of services (currently only Mac OS X), this will enable or disable
+registration of the service.  This defaults to "yes".
+.TP
 .B umask
 Sets the inherited umask for the service.  Expects an octal value.  
 This option may be set in the "defaults" section to set a umask
