Update IPv6 part of addrlist_match

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -852,3 +852,5 @@ devel
 		list used hostnames with no dots in the name. -Steve Grubb
 	Numerous memory leaks when parsing errors occurred. -Steve Grubb
 	Remove the servers and xadmin internal services.
+	Update addrlist_match to use the address part of the IPv6 address
+		structure. -Christof Meerwald 
