Correct a double free condition in the retry routines. xtimer deletes its callbacks, server_retry was calling stop_retry_timer which deleted it too. server_retry was also not re-registering for timer callbacks if count > 0.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -858,3 +858,4 @@ devel
 		access controls. -Steve Grubb
 	Added TRAFFIC logging option to report total bytes in and out for a 
 		redirected service. -Christof Meerwald 
+	Correct a double-free condition if a retry was scheduled. -Steve Grubb
