Portability updates from Matthias Andree

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -865,4 +865,6 @@ This file describes the changes to xinetd. The base version is 2.0.0.
 	Smorefds wasn't allocating the proper amount of sio descriptor space
 		if the fd was > 5 over its last known fd. -Steve Grubb
 devel
-	Add NULL entry to success_log_options to properly end the nvlist.
+	Add NULL entry to success_log_options to properly end the
+		 nvlist. -Steve Grubb
+	Portability updates to libportable.h. -Matthias Andree
