--- a/CHANGELOG
+++ b/CHANGELOG
@@ -890,3 +890,4 @@ This file describes the changes to xinetd. The base version is 2.0.0.
 cvs-devel
 	Applied patch from Art Haas for gcc 3.5 compat.
 	Flush the descriptor after writing a banner. -Jay Fenlason
+	Don't assume char is signed in the udp drain() function -Don Provan
