Various updates: 1) fix a problem with accessing dangling pointer with service release. 2) prevent double frees by multiple calls to server_end (child_exit + sendsig) 3) Update xconv.pl to handle :'s in inetd.conf 4) Update BACKLOG to 64 from 7 5) Add RPC stuff to confparse.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -894,3 +894,8 @@ cvs-devel
 	If log remote user is on, a descriptor between 0-2 is likely to
 		be opened. Call msg_suspend before dup'ing socket to
 		avoid this bug. -Glen Johnson
+	Added confparse() RPC patch from RedHat's RHEL4 srpm.
+	Fixed some service release bugs with accesses to dangling pointers.
+	Updated BACKLOG to 64 from 7
+	Updated xconv.pl to understand ":" in inetd.conf files from
+		FreeBSD ports patch.
