--- a/CHANGELOG
+++ b/CHANGELOG
@@ -903,3 +903,5 @@ cvs-devel
 	Added a libwrap service attribute to specify the service name
 		to check access via libwrap.
 	Make some type cleanups to fix some warnings.
+	Parse things as unsigned instead of signed where it makes sense.
+		Based on a patch from Tony Ernst.
