Adds escapes to manpages More realistic examples paths

--- a/xinetd/xinetd.conf.man
+++ b/xinetd/xinetd.conf.man
@@ -13,7 +13,7 @@ xinetd.conf \- Extended Internet Services Daemon configuration file
 .B "xinetd.conf"
 is the configuration file that
 determines the services provided by \fBxinetd\fP.
-Any line whose first non-white-space character is a '#' is considered
+Any line whose first non\-white\-space character is a '#' is considered
 a comment line. Empty lines are ignored.
 .LP
 The file contains entries of the form:
@@ -71,7 +71,7 @@ if this is an RPC service
 if this is a service provided by \fBxinetd\fP.
 .TP
 .B TCPMUX/TCPMUXPLUS
-if this is a service that will be started according to the RFC 1078 protocol on the TCPMUX well-known port. See the section describing TCPMUX services below.
+if this is a service that will be started according to the RFC 1078 protocol on the TCPMUX well\-known port. See the section describing TCPMUX services below.
 .TP
 .B UNLISTED
 if this is a service not listed in a standard system file
@@ -79,7 +79,7 @@ if this is a service not listed in a standard system file
 .I /etc/rpc 
 for RPC services, or
 .I /etc/services
-for non-RPC services).
+for non\-RPC services).
 .RE
 .TP
 .B flags
@@ -88,7 +88,7 @@ Any combination of the following flags may be used:
 .TP 12
 .B INTERCEPT
 Intercept packets or accepted connections in order to verify that they
-are coming from acceptable locations (internal or multi-threaded
+are coming from acceptable locations (internal or multi\-threaded
 services cannot be intercepted).
 .TP
 .B NORETRY
@@ -97,7 +97,7 @@ Avoid retry attempts in case of fork failure.
 .B IDONLY
 Accept connections only when the remote end identifies the remote user
 (i.e. the remote host must run an identification server).
-This flag applies only to connection-based services.
+This flag applies only to connection\-based services.
 This flag is ineffective if the
 .B USERID
 log option is not used.
@@ -121,7 +121,7 @@ is not a tcp service, this option has no effect.
 .B NOLIBWRAP
 This disables internal calling of the tcpwrap library to determine access
 to the service.  This may be needed in order to use libwrap functionality
-not available to long-running processes such as xinetd; in this case,
+not available to long\-running processes such as xinetd; in this case,
 the tcpd program can be called explicitly (see also the NAMEINARGS flag).
 For RPC services using TCP transport, this flag is automatically turned on,
 because xinetd cannot get remote host address information for the rpc port.
@@ -162,10 +162,10 @@ Possible values for this attribute include:
 .RS
 .TP 12
 .I stream
-stream-based service
+stream\-based service
 .TP
 .I dgram
-datagram-based service
+datagram\-based service
 .TP
 .I raw
 service that requires direct access to IP
@@ -183,13 +183,13 @@ attribute is not defined, the default protocol employed by the service
 will be used.
 .TP
 .B wait
-This attribute determines if the service is single-threaded or
-multi-threaded and whether or not xinetd accepts the connection or the server
+This attribute determines if the service is single\-threaded or
+multi\-threaded and whether or not xinetd accepts the connection or the server
 program accepts the connection. If its value is \fIyes\fP, the service is 
-single-threaded; this means that \fBxinetd\fP will start the server and then 
+single\-threaded; this means that \fBxinetd\fP will start the server and then 
 it will stop handling requests for the service until the server dies and that
 the server software will accept the connection. If the attribute value is 
-\fIno\fP, the service is multi-threaded and \fBxinetd\fP will keep handling 
+\fIno\fP, the service is multi\-threaded and \fBxinetd\fP will keep handling 
 new service requests and xinetd will accept the connection. It should be noted 
 that udp/dgram services normally expect the value to be yes since udp is not
 connection oriented, while tcp/stream servers normally expect the value to be
@@ -201,7 +201,7 @@ be numeric or a name. If a name is given (recommended),  the user name must
 exist in
 .I /etc/passwd.
 This attribute is ineffective if the effective user ID 
-of \fBxinetd\fP is not super-user.
+of \fBxinetd\fP is not super\-user.
 .TP
 .B group
 determines the gid for the server process. The group attribute can either
@@ -212,7 +212,7 @@ If a group is not specified, the group
 of \fIuser\fP will be used (from 
 .I /etc/passwd).
 This attribute is ineffective if the effective user ID 
-of \fBxinetd\fP is not super-user and if the \fBgroups\fP attribute
+of \fBxinetd\fP is not super\-user and if the \fBgroups\fP attribute
 is not set to 'yes'.
 .TP
 .B instances
@@ -293,7 +293,7 @@ then the host with the address 128.138.209.10 can not access the service).
 .TP
 .B access_times
 determines the time intervals when the service is available. An interval
-has the form \fIhour:min-hour:min\fP (connections 
+has the form \fIhour:min\-hour:min\fP (connections 
 .I will 
 be accepted at the bounds of an interval). Hours can range from 0 to 23 and
 minutes from 0 to 59.
@@ -371,7 +371,7 @@ logs the remote host address
 .TP
 .B USERID
 logs the user id of the remote user using the RFC 1413 identification protocol.
-This option is available only for multi-threaded stream services.
+This option is available only for multi\-threaded stream services.
 .TP
 .B EXIT
 logs the fact that a server exited along with the exit status or the
@@ -400,7 +400,7 @@ logs the remote host address.
 .TP
 .B USERID
 logs the user id of the remote user using the RFC 1413 identification protocol.
-This option is available only for multi-threaded stream services.
+This option is available only for multi\-threaded stream services.
 .TP 
 .B ATTEMPT
 logs the fact that a failed attempt was made
@@ -466,17 +466,17 @@ Synonym for bind.
 Takes the name of a file to be splatted at the remote host when a 
 connection to that service is established.  This banner is printed
 regardless of access control.  It should *always* be printed when
-a connection has been made.  \fBxinetd\fP outputs the file as-is,
+a connection has been made.  \fBxinetd\fP outputs the file as\-is,
 so you must ensure the file is correctly formatted for the service's
-protocol.  In paticular, if the protocol requires CR-LF pairs for line
+protocol.  In paticular, if the protocol requires CR\-LF pairs for line
 termination, you must supply them.
 .TP
 .B banner_success
 Takes the name of a file to be splatted at the remote host when a
 connection to that service is granted.  This banner is printed
 as soon as access is granted for the service.  \fBxinetd\fP outputs the
-file as-is, so you must ensure the file is correctly formatted for
-the service's protocol.  In paticular, if the protocol requires CR-LF
+file as\-is, so you must ensure the file is correctly formatted for
+the service's protocol.  In paticular, if the protocol requires CR\-LF
 pairs for line termination, you must supply them.
 .TP
 .B banner_fail
@@ -484,9 +484,9 @@ Takes the name of a file to be splatted at the remote host when a
 connection to that service is denied.  This banner is printed 
 immediately upon denial of access.  This is useful for informing
 your users that they are doing something bad and they shouldn't be
-doing it anymore.  \fBxinetd\fP outputs the file as-is,
+doing it anymore.  \fBxinetd\fP outputs the file as\-is,
 so you must ensure the file is correctly formatted for the service's
-protocol.  In paticular, if the protocol requires CR-LF pairs for line
+protocol.  In paticular, if the protocol requires CR\-LF pairs for line
 termination, you must supply them.
 .TP
 .B per_source
@@ -499,7 +499,7 @@ Limits the rate of incoming connections.  Takes two arguments.
 The first argument is the number of connections per second to handle.
 If the rate of incoming connections is higher than this, the service
 will be temporarily disabled.  The second argument is the number of
-seconds to wait before re-enabling the service after it has been disabled.
+seconds to wait before re\-enabling the service after it has been disabled.
 The default for this setting is 50 incoming connections and the interval
 is 10 seconds.
 .TP
@@ -509,7 +509,7 @@ stop accepting connections.  For example: 2 or 2.5.  The service
 will stop accepting connections at this load.  This is the one minute
 load average.  This is an OS dependent feature, and currently only
 Linux, Solaris, and FreeBSD are supported for this.  This feature is
-only avaliable if xinetd was configured with the -with-loadavg option.
+only available if xinetd was configured with the \-with\-loadavg option.
 .TP
 .B groups
 Takes either "yes" or "no".  If the groups attribute is set to
@@ -627,7 +627,7 @@ The necessary attributes for a service are:
 (\fIunlisted\fP RPC services only)
 .TP
 .B port
-(\fIunlisted\fP non-RPC services only)
+(\fIunlisted\fP non\-RPC services only)
 .RE
 .PD
 .LP
@@ -770,7 +770,7 @@ and
 These services are under the same access restrictions as all other
 services except for the ones that don't require \fBxinetd\fP to fork
 another process for them. Those ones (\fItime\fP, \fIdaytime\fP,
-and the datagram-based \fIecho\fP, \fIchargen\fP, and \fIdiscard\fP) 
+and the datagram\-based \fIecho\fP, \fIchargen\fP, and \fIdiscard\fP) 
 have no limitation in the number of 
 .B instances.
 .LP
@@ -778,8 +778,8 @@ have no limitation in the number of
 .SH "TCPMUX Services"
 .LP
 \fBxinetd\fP supports TCPMUX services that conform to RFC 1078. These services 
-may not have a well-known port associated with them, and can be accessed via 
-the TCPMUX well-known port.
+may not have a well\-known port associated with them, and can be accessed via 
+the TCPMUX well\-known port.
 .LP
 For each service that is to be accessed via TCPMUX, a service entry in
 \fB/etc/xinetd.conf\fP or in a configuration file in an \fBincludedir\fP 
@@ -789,7 +789,7 @@ The \fIservice_name\fP field (as defined above for each service in any
 \fBxinetd\fP 
 configuration file) must be identical to the string that is passed (according 
 to RFC 1078 protocol) to \fBxinetd\fP when the remote service requestor first 
-makes the connection on the TCPMUX well-known port.  Private protocols should 
+makes the connection on the TCPMUX well\-known port.  Private protocols should 
 use a service name that has a high probability of being unique. One way is to 
 prepend the service name with some form of organization ID.
 .LP
@@ -805,7 +805,7 @@ not listed in a standard system file
 .I /etc/rpc
 for RPC services, or
 .I /etc/services
-for non-RPC services).
+for non\-RPC services).
 .LP	
 The \fIsocket_type\fP for these services must be \fBstream\fP, and the 
 \fIprotocol\fP must be \fBtcp\fP.
@@ -831,7 +831,7 @@ service myorg_server
 .IP user
 = root
 .IP server
-= /usr/etc/my_server_exec
+= /usr/bin/my_server_exec
 .RE
 }
 .fi
@@ -839,7 +839,7 @@ service myorg_server
 .PD
 .LP
 Besides a service entry for each service that can be accessed
-via the TCPMUX well-known port, a service entry for TCPMUX itself
+via the TCPMUX well\-known port, a service entry for TCPMUX itself
 must also be included in the \fBxinetd\fP configuration. Consider the following
 sample:
 .PD .1v
@@ -890,7 +890,7 @@ The address check is based on the IP address of the remote host and
 not on its domain address. We do this so that we can avoid
 remote name lookups which may take a long time (since
 .B xinetd
-is single-threaded, a name lookup will prevent the daemon from
+is single\-threaded, a name lookup will prevent the daemon from
 accepting any other requests until the lookup is resolved).
 The down side of this scheme is that if the IP address of a remote
 host changes, then access to that host may be denied until
@@ -915,12 +915,12 @@ This obviously has a performance impact so
 it is up to you to make the compromise between security and performance
 for each service.
 The following tables show the overhead of interception.
-The first table shows the time overhead-per-datagram for a UDP-based service
+The first table shows the time overhead\-per\-datagram for a UDP\-based service
 using various datagram sizes.
-For TCP-based services we measured the bandwidth reduction 
+For TCP\-based services we measured the bandwidth reduction 
 because of interception while sending
 a certain amount of data from client to server (the time overhead should
-the same as for UDP-based services but it is "paid" only by the first
+the same as for UDP\-based services but it is "paid" only by the first
 packet of a continuous data transmission).
 The amount of data is given
 in the table as \fIsystem_calls\fPx\fIdata_sent_per_call\fP, i.e.
@@ -1020,7 +1020,7 @@ service login
 .IP user
 = root
 .IP server
-= /usr/etc/in.rlogind
+= /usr/sbin/in.rlogind
 .IP instances
 = UNLIMITED
 .RE
@@ -1042,7 +1042,7 @@ service shell
 .IP instances
 = UNLIMITED
 .IP server
-= /usr/etc/in.rshd
+= /usr/sbin/in.rshd
 .IP log_on_success
 += HOST 
 .RE
@@ -1060,9 +1060,9 @@ service ftp
 .IP user
 = root
 .IP server
-= /usr/etc/in.ftpd
+= /usr/sbin/in.ftpd
 .IP server_args
-= -l
+= \-l
 .IP instances
 = 4
 .IP log_on_success
@@ -1086,7 +1086,7 @@ service telnet
 .IP user
 = root
 .IP server
-= /usr/etc/in.telnetd
+= /usr/sbin/in.telnetd
 .IP rlimit_as
 = 8M
 .IP rlimit_cpu
@@ -1103,7 +1103,7 @@ service echo
 {
 .RS
 .IP id 20
-= echo-stream
+= echo\-stream
 .IP type
 = INTERNAL
 .IP socket_type
@@ -1119,7 +1119,7 @@ service echo
 {
 .RS
 .IP id 20
-= echo-dgram
+= echo\-dgram
 .IP type
 = INTERNAL
 .IP socket_type
@@ -1144,7 +1144,7 @@ service rstatd
 .IP protocol
 = udp
 .IP server
-= /usr/etc/rpc.rstatd
+= /usr/sbin/rpc.rstatd
 .IP wait
 = yes
 .IP user
@@ -1250,4 +1250,4 @@ the socket passed to the server can only accept connections.
 .LP
 The
 .B INTERCEPT
-flag is not supported for internal services or multi-threaded services.
+flag is not supported for internal services or multi\-threaded services.
