xinetd should be able to listen on IPv6 even in -inetd_compat mode
xinetd does not bind to IPv6 addresses (and does not seems to have an
option to do so) when used in -inetd_compat mode.  As current inetd's
are IPv6-aware, this is a problem: this means xinetd
cannot be used as a drop-in inetd replacement.

The attached patch is a suggestion: it adds a -inetd_ipv6 global
option that, if used, causes inetd-compatibility lines to have an
implicit "IPv6" option.  Perhaps this is not the best solution, but
there should definitely be a way to get inetd.conf to be read in
IPv6-aware mode

Signed-off-by: David Madore <david@pleiades.stars>
Signed-off-by: Maxin B. John <maxin.john@intel.com>

--- a/xinetd/xinetd.man
+++ b/xinetd/xinetd.man
@@ -106,6 +106,12 @@ This option causes xinetd to read /etc/inetd.conf in addition to the
 standard xinetd config files.  /etc/inetd.conf is read after the
 standard xinetd config files.
 .TP
+.BI \-inetd_ipv6
+This option causes xinetd to bind to IPv6 (AF_INET6) addresses for
+inetd compatibility lines (see previous option).  This only affects
+how /etc/inetd.conf is interpreted and thus only has any effect if
+the \-inetd_compat option is also used.
+.TP
 .BI \-cc " interval"
 This option instructs
 .B xinetd
