--- a/CHANGELOG
+++ b/CHANGELOG
@@ -932,3 +932,7 @@ This file describes the changes to xinetd. The base version is 2.0.0.
 	Change version number to 2.3.15devel, indicating an interim
 		developmental source snapshot.
 	Merge patch from Thomas Swan regarding CVE-2012-0862
+2.3.16
+	Restructure the repository for saner file locations
+	Redo buildsystem for proper autotools
+	Include patches from SUSE, Debian, and Fedora from their packages
