--- a/man/xinetd.8
+++ b/man/xinetd.8
@@ -174,6 +174,10 @@ default configuration file
 .TP
 .B /var/run/xinetd.dump
 default dump file
+.\" *********************** ENVIRONMENT ****************************
+.SH "ENVIRONMENT"
+.B REMOTE_HOST
+Contains the IP address of the client.
 .PD
 .\" *********************** SEE ALSO ****************************
 .SH "SEE ALSO"
