--- a/man/strparse.3
+++ b/man/strparse.3
@@ -58,7 +58,7 @@ works. The \fIflags\fR argument is formed by ORing one or more of
 the following constants:
 .TP 20
 .SB STR_RETURN_ERROR
-If something goes wrong return a value that indicates that an error occured
+If something goes wrong return a value that indicates that an error occurred
 (e.g. out of memory). The default is for the program to be terminated
 with an appropriate error message.
 .TP
