Disallow specifying multiple log_type
xinetd doesn't support logging to multiple target so check it already in
parser to avoid unwanted consequences (this lead to double free upon
SIGHUP).

--- a/man/xinetd.conf.5
+++ b/man/xinetd.conf.5
@@ -299,7 +299,7 @@ be accepted at the bounds of an interval). Hours can range from 0 to 23 and
 minutes from 0 to 59.
 .TP
 .B log_type
-determines where the service log output is sent. There are two formats:
+determines where the service log output is sent. Select just one of the two formats:
 .RS
 .TP
 .B SYSLOG " \fIsyslog_facility [syslog_level]\fP"
